# azure_secrets

./: README.md  azure_secrets.py  pyproject.toml  requirements.txt
