[build-system]
requires = [
	"flit_core >=3.2,<4",
    "python-dotenv>=0.19.1",
    "azure-identity>=1.7.1",
    "azure-keyvault-secrets>=4.3.0",]
build-backend = "flit_core.buildapi"

[project]
name = "azure_secrets"
authors = [{name = "None", email = "none@example.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.comm/none/azure_secrets"
